# CloudflareDDNSUpdater

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  run.sh
cpp/: DNSRecord.cpp  Http.cpp  HttpHeader.cpp  Response.cpp  Updator.cpp  main.cpp
headers/: Config.hpp  DNSRecord.hpp  Http.hpp  HttpHeader.hpp  Infos.hpp  Response.hpp  Type.hpp  Updator.hpp  Urls.hpp  UserInfo.hpp
resources/: config.json  userinfo.json
